tests/baselines/reference/shadowedInternalModule.errors.txt
shadowedInternalModule.ts(13,20): error TS2437: Module 'A' is hidden by a local declaration with the same name.
shadowedInternalModule.ts(30,5): error TS2440: Import declaration conflicts with local declaration of 'Y'.
shadowedInternalModule.ts(47,10): error TS2438: Import name cannot be 'any'.
shadowedInternalModule.ts(62,3): error TS2440: Import declaration conflicts with local declaration of 'Q'.


==== shadowedInternalModule.ts (4 errors) ====
    // all errors imported modules conflict with local variables
    
    namespace A {
        export var Point = { x: 0, y: 0 }
        export interface Point {
            x: number;
            y: number;
        }
    } 
    
    namespace B {
        var A = { x: 0, y: 0 };
        import Point = A;
                       ~
!!! error TS2437: Module 'A' is hidden by a local declaration with the same name.
    }
    
    namespace X {
        export namespace Y {
            export interface Point{
                x: number;
                y: number
            }
        }
    
        export class Y {
            name: string;
        }
    }
    
    namespace Z {
        import Y = X.Y;
        ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'Y'.
    
        var Y = 12;
    }
    
    //
    
    namespace a {
      export type A = number;
    }
    
    namespace b {
      export import A = a.A;
      export namespace A {}
    }
    
    namespace c {
      import any = b.A;
             ~~~
!!! error TS2438: Import name cannot be 'any'.
    }
    
    //
    
    namespace q {
      export const Q = {};
    }
    
    namespace r {
      export import Q = q.Q;
      export type Q = number;
    }
    
    namespace s {
      import Q = r.Q;
      ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'Q'.
      const Q = 0;
    }
    